--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ body {
 	color: #1c1b1b;
 }
 
+::-webkit-scrollbar{width: 16px;}
+::-webkit-scrollbar-track {background-color:#f1f1f1;}
+::-webkit-scrollbar-thumb {background-color:#f77555; }
+::-webkit-scrollbar-thumb:hover {background: #fb977e;}
+::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {
+width:16px;height:16px;background:#fb977e;} 
+
 ul,ol {
 	padding: 0;
 	margin: 0;
@@ -730,6 +737,25 @@ button:focus {
 	transition: all 0.5s;
 	opacity: 0;
 }
+.mu-portfolio-content>ol>li{position: relative; /*display: none;*/ z-index: 600;}
+.mu-portfolio-content>ol>li:after{content:""; position: absolute; left: -130px; top: -400px; width: 1384px; height: 150px; background: rgb(13,13,13); background: linear-gradient(180deg, rgba(13,13,13,0.9) 0%, rgba(4,4,4,0) 100%); z-index: 530; border-radius: 40px 0 0 0;}
+.mu-portfolio-content>ol>li:before{content:""; position: absolute; left: -130px; bottom:-300px; width: 1384px; height: 150px; background: rgb(13,13,13);
+	background: linear-gradient(0deg, rgba(13,13,13,0.7) 0%, rgba(4,4,4,0) 100%); z-index: 530;}
+
+.mu-portfolio-content>ol>li>a{position: absolute; left: 50%; display: block; z-index: 550; color: #fff; font-size: 20px; font-weight: 800; text-align: center; line-height: 40px; background-color: #fb623b;}
+.mu-portfolio-content>ol>li>a:nth-child(1){top: -370px; width:40px; height:40px; margin-left: -30px; border-radius: 50%;; }
+.mu-portfolio-content>ol>li>a:nth-child(2){bottom: -270px; width:80px; height:40px; margin-left: -50px; border-radius: 20px; }
+
+.mu-portfolio-content>ol>li>.con{overflow: scroll; overflow-x:hidden; position: absolute; width: 1400px; height: 700px; left: 50%; top: 70%; margin:-400px 0 0 -700px; padding: 90px; z-index: 500; background-color:rgba(0, 0, 0, 0.9); box-shadow:rgba(0, 0, 0, 0.2) 5px 5px 5px; border-radius: 40px 0 0 0; }
+.mu-portfolio-content>ol>li>.con>.txt_box{color: #fff; text-align: center; margin-bottom: 30px;}
+.mu-portfolio-content>ol>li>.con>.txt_box>h5{font-size: 30px; margin-bottom: 30px;}
+.mu-portfolio-content>ol>li>.con>.txt_box>p{width: 1100px; margin:0 auto ; text-align: left; font-weight: 100;}
+.mu-portfolio-content>ol>li>.con>.txt_box>p>span{color: #f77555;}
+.mu-portfolio-content>ol>li>.con>.frame{width: 1100px; margin: 0 auto; outline: 1px solid red;}
+.mu-portfolio-content>ol>li>.con>.frame:after{display: block; content:""; clear: both;;}
+.mu-portfolio-content>ol>li>.con>.frame>img{width: 1100px; display: block; margin-bottom: 20px; outline: 1px solid yellow;}
+.mu-portfolio-content>ol>li>.con>.frame>img:nth-child(2){float: left; display: block;}
+.mu-portfolio-content>ol>li>.con>p{width: 1100px; margin: 0 auto 40px; color: #fff;}
 
 .mu-item-thumbonail{
 	display: inline;
@@ -781,7 +807,6 @@ button:focus {
 .mu-filter-imglink:focus {
 	background-color: #fff;
 } 
-
 
 /* Filter controls */
 
